# dlg

./: CMakeLists.txt
include/dlg/: basic.h  dialog.h  hub.h
include/dlg/grpc/: client.h  core.h  factory.h  final.cpp.h  final.h  operation.h  reader.cpp.h  reader.h  server.h  socket.h  supervisor.h  traits.h  writer.cpp.h  writer.h
include/dlg/grpc/client/: activator.h  core.h  dialog.h  final.cpp.h  final.h  initial.cpp.h  initial.h  reader.cpp.h  reader.h  traits.h  writer.cpp.h  writer.h
include/dlg/grpc/server/: acceptor.h  activator.h  core.h  dialog.h  final.cpp.h  final.h  initial.cpp.h  initial.h  reader.cpp.h  reader.h  service.h  traits.h  watcher.cpp.h  watcher.h  writer.cpp.h  writer.h
include/dlg/local/: dialog.h
include/dlg/util/: flag.h  log.h
src/: dlg.cpp
src/util/: log.cpp
